# CPP

./: .gitignore  C++11Thread  C++11Thread.cc  README.md  main.cpp  singleton.h
zlsg/: CMakeCache.txt  CMakeLists.txt  LZSGConfig.h  LZSGConfig.h.in  Makefile  cmake_install.cmake  makefile  resource.h  server.sln  server.vcxproj  xxsq.mk
zlsg/amtsvr/: Makefile  amtsvr_env.cc  amtsvr_error.h  amtsvr_imp.h  amtsvr_init.h  amtsvr_module.h  amtsvr_monitor.cc  amtsvr_start.cc  amtsvr_timer.cc  cmake_install.cmake
zlsg/backdoor/css/: sidebar.css
zlsg/cmake/Modules/: FindLUA.cmake  FindMYSQL.cmake  FindPTHREAD.cmake  FindSYS.cmake
zlsg/database/: gift.sql  t_files.sql  t_user.sql  update-0.2.sql  update-0.4.sql
zlsg/frame/base/: Makefile  MapConfig.h  base64_coder.h  base_time.cc  base_time.h  cache_ctx.cc  cache_ctx.h  cache_dwctx.cc  cache_dwctx.h  cfg_cache_mgr.cc  cfg_cache_mgr.h  client_pb_mgr.cc  client_pb_mgr.h  cmake_install.cmake  cmq_svr_msg.cc  comm.h  define.h  makefile  msg_handler_pool.cc  pb_coder.h  pb_mgr.cc  pb_writer.h  random.h  rect.cc  server_define.h  sintable.cc  sintable.h  sql_operator.cc  utf8.h  vector_obj.h
zlsg/frame/center/: CMakeLists.txt  Makefile  cmake_install.cmake
zlsg/frame/chores/: CMakeLists.txt  Makefile  cmake_install.cmake
zlsg/frame/config/: CMakeLists.txt  Makefile  cfg_parser.h  cmake_install.cmake  config_activity.cc  config_activity.h  config_base.cc  config_basic.cc  config_beauty.h  config_bipize.cc  config_birth.cc  config_bows.h  config_devil.h  config_edreward.cc  config_edreward.h  config_effect.cc  config_equip_upgrade.cc  config_equip_upgrade.h  config_fallitem.cc  config_fallitem.h  config_flag.cc  config_flag.h  config_gem.h  config_gem_act.cc  config_gem_act.h  config_giantraid.cc  config_gift.h  config_land.cc  config_lottery.cc  config_mail.h  config_mall.cc  config_mall.h  config_map.cc  config_material.h  config_melting_equip.cc  config_melting_equip.h  config_mgr.h  config_mounts.cc  config_mounts_skill.cc  config_mounts_skill.h  (+27 more)
zlsg/frame/navmesh/: DetourNavMesh.cc  Makefile  cmake_install.cmake
zlsg/frame/pb/: CMakeLists.txt  Makefile  cmake_install.cmake  makefile
zlsg/frame/player_role/: CMakeLists.txt  Makefile  black_shop_parser.cc  black_shop_parser.h  buffer_parser.cc  buffer_parser.h  cd_cooldown_parser.cc  cd_cooldown_parser.h  center_role.cc  center_role.h  center_role_set.cc  center_role_set.h  cmake_install.cmake  comm_define.h  gem_parser.cc  gem_parser.h  mail_parser.cc  mail_parser.h  makefile  operate_log.cc  operate_log.h  pet_parser.cc  pet_parser.h  player_role.cc  player_role.h  player_role_auto_raid.cc  player_role_auto_raid.h  player_role_black_shop.cc  player_role_black_shop.h  player_role_bows.cc  player_role_bows.h  player_role_buffer.cc  player_role_buffer.h  player_role_cd_cooldown.cc  player_role_cd_cooldown.h  player_role_cycle.cc  player_role_cycle.h  player_role_define.h  player_role_devil.cc  player_role_devil.h  (+68 more)
zlsg/frame/scene/: CMakeLists.txt  Makefile  arena_scene_inst.cc  arena_scene_inst.h  battle_scene.cc  battle_scene.h  battle_scene_inst.cc  battle_scene_inst.h  battle_user_score.cc  battle_user_score.h  boss_scene.cc  boss_scene.h  boss_scene_inst.cc  boss_scene_inst.h  camp_mgr.cc  camp_mgr.h  cell.cc  cell.h  cell_pos.h  cmake_install.cmake  create_npc_rule.cc  create_npc_rule.h  cycle_scene_inst.cc  cycle_scene_inst.h  effect_result.cc  effect_result.h  family_scene_inst.cc  family_scene_inst.h  farm_npc_mgr.cc  farm_npc_mgr.h  farm_scene_inst.cc  farm_scene_inst.h  farm_scene_npc.cc  farm_scene_npc.h  filter_target.cc  filter_target.h  game_map.cc  game_map.h  game_map_mgr.cc  game_map_mgr.h  (+82 more)
zlsg/frame/script/: CMakeLists.txt  Makefile  cmake_install.cmake  makefile
zlsg/server/amtsvr/: CMakeLists.txt  amtsvr.h  amtsvr_env.h  amtsvr_error.cc  amtsvr_handle.cc  amtsvr_handle.h  amtsvr_init.cc  amtsvr_main.cc  amtsvr_module.cc  amtsvr_monitor.h  amtsvr_mq.cc  amtsvr_mq.h  amtsvr_server.cc  amtsvr_server.h  amtsvr_timer.h  compat52.cc  luacompat52.h  makefile  stdafx.h
zlsg/server/backdoor/: README.md
zlsg/server/database/: dev.sql  server_list.sql  update-0.1.sql  update-0.3.sql  updateserver.sql
zlsg/server/frame/: makefile
zlsg/service/: makefile
zlsg/service/agent_service/: CMakeLists.txt  Makefile  agent_interface.cc  agent_interface.h  agent_service.cc  agent_service.h  cmake_install.cmake  inner_interface.cc  inner_interface.h  makefile  pb_agent.h  pb_agent_node.cc
zlsg/service/center_service/: CMakeLists.txt  Makefile  center_define.h  center_family_mgr.h  center_interface.cc  center_interface.h  center_map_mgr.cc  center_map_mgr.h  center_mgr.h  center_service.cc  center_service.h  cmake_install.cmake  makefile  pb_center_activity.cc  pb_center_arena.cc  pb_center_battle.cc  pb_center_boss.cc  pb_center_chat_msg.cc  pb_center_city.cc  pb_center_create_role_check.cc  pb_center_cycle.cc  pb_center_delivery_mail.cc  pb_center_devil.cc  pb_center_explore.cc  pb_center_family.cc  pb_center_farm.cc  pb_center_flower.cc  pb_center_friend.cc  pb_center_inner_activity.cc  pb_center_inner_backpack.cc  pb_center_inner_ban.cc  pb_center_inner_delivery.cc  pb_center_inner_email.cc  pb_center_inner_function_control.cc  pb_center_inner_notice.cc  pb_center_inner_player.cc  pb_center_inner_server.cc  pb_center_jump_user.cc  pb_center_label.cc  pb_center_log.cc  (+10 more)
zlsg/service/chores_service/: CMakeLists.txt  Makefile  chores_interface.cc  chores_interface.h  chores_service.cc  chores_service.h  cmake_install.cmake  makefile  pb_chores_farm.cc
zlsg/service/data_service/: CMakeLists.txt  Makefile  cmake_install.cmake  makefile
zlsg/service/game_service/: CMakeLists.txt  Makefile  cmake_install.cmake  game_interface.cc  game_interface.h  game_service.cc  game_service.h  makefile  pb_activity.cc  pb_arena.cc  pb_attack.cc  pb_battle.cc  pb_bows.cc  pb_city_attack.cc  pb_cycle.cc  pb_devil.cc  pb_family.cc  pb_farm.cc  pb_filed_score.cc  pb_flower.cc  pb_friend.cc  pb_game_inner_backpack.cc  pb_game_inner_ban.cc  pb_game_inner_delivery.cc  pb_gem.cc  (+38 more)
(+1797 files in other folders)
